# mcmp

./: Cargo.toml  a.html
mcmp-client/: Cargo.toml
mcmp-client-lib/: Cargo.toml
mcmp-client-lib/src/: client.rs  lib.rs  message.rs
mcmp-common/: Cargo.toml
mcmp-common/src/: error.rs  message.rs
mcmp-server/: .gitignore  Cargo.toml  default_config.toml
mcmp-server/src/: main.rs
mcmp-server/src/cli/: mod.rs
mcmp-server/src/config/: mod.rs
mcmp-server/src/database/: mod.rs
mcmp-server/src/database/data/: mod.rs
mcmp-server/src/server/: data.rs  mod.rs
mcmp-server/src/server/message_handler/: error.rs  mod.rs
