[package]
name = "mcmp-client-lib"
authors.workspace = true
description.workspace = true
readme.workspace = true
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
futures = "0.3.30"
lazy_static = "1.4.0"
serde = { version = "1.0.197", features = ["derive"] }
url = "2.5.0"
ws = "0.9.2"
