[package]
name = "mcmp-server"
authors.workspace = true
description.workspace = true
readme.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.81"
env_logger = "0.11.3"
log = "0.4.21"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
warp = "0.3.6"
futures-util = "0.3.30"
tokio-stream = "0.1.15"
serde_json = "1.0.114"
bincode = "1.3.3"
uuid = { version = "1.8.0", features = ["v4"] }
toml = "0.8.12"
clap = { version = "4.5.3", features = ["derive"] }
camino = "1.1.6"
pwhash = "1.0.0"
mcmp-common = {path = "../mcmp-common"}
